syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup.edu";
option java_outer_classname = "KeyManagerGrpc";
option objc_class_prefix = "HLW";

package br.com.zup.edu;

service ChavePixCadastrarService {
  rpc cadastrar (ChavePixCadastrarRequest) returns (ChavePixCadastrarResponse) {}
}

service ChavePixRemoverService {
  rpc remover (ChavePixRemoverRequest) returns (ChavePixRemoverResponse) {}
}

enum TipoChave {
  CHAVE_DESCONHECIDA = 0;
  CPF = 1;
  CELULAR = 2;
  EMAIL = 3;
  ALEATORIA = 4;
}

enum TipoConta {
  CONTA_DESCONHECIDA = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;
}

message ChavePixCadastrarRequest {
  string clienteId = 1;
  TipoChave tipoChave = 2;
  string chave = 3;
  TipoConta tipoConta = 4;
}

message ChavePixCadastrarResponse {
  string pixId = 1;
}

message ChavePixRemoverRequest {
  string clienteId = 1;
  string pixIdInterno = 2;
}

message ChavePixRemoverResponse {
  bool removida = 1;
}